# haskell-ebyam

./: .gitignore  README.md  haskell-ebyam.cabal  stack.yaml
src/Data/: Ebyam.hs
