cabal-version:       2.2
name:                haskell-ebyam
version:             0.1.0.0
synopsis:            Optional values - backwards wrapper for purescript-maybe
description:         Please see README.md
homepage:            https://github.com/adarqui/haskell-ebyam#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Andrew Darqui
maintainer:          andrew.darqui@gmail.com
copyright:           2016 Andrew Darqui
category:            Development
build-type:          Simple

library
  hs-source-dirs:      src
  exposed-modules:     Data.Ebyam
  build-depends:       base < 5
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite haskell-ebyam-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , haskell-ebyam
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/adarqui/haskell-ebyam
